[Web Payments] Match modifiers with local cards if no type specified

Bug: 751226
Change-Id: If1598d21747ab14fdf7a54055c8f2c66be5426ef