ios/chrome/browser/payments/ios_payment_instrument.mm
@@ -92,8 +92,9 @@ base::string16 IOSPaymentInstrument::GetSublabel() const {
 
 bool IOSPaymentInstrument::IsValidForModifier(
     const std::vector<std::string>& supported_methods,
+    const std::vector<std::string>& supported_networks,
     const std::set<autofill::CreditCard::CardType>& supported_types,
-    const std::vector<std::string>& supported_networks) const {
+    bool supported_types_specified) const {
   // This instrument only matches url-based payment method identifiers that
   // are equal to the instrument's method name.
   if (std::find(supported_methods.begin(), supported_methods.end(),
